@@ -62,9 +62,32 @@
 #include <config.h>
 #endif
 
+#ifndef _MSC_VER
 #include <stdint.h>
+#else
+/* Microsoft compiler does not define several 
+ * type of int (in a standard way)
+ */
+typedef __int8 int8_t;
+typedef unsigned __int8 uint8_t;
+typedef __int16 int16_t;
+typedef unsigned __int16 uint16_t;
+typedef __int32 int32_t;
+typedef unsigned __int32 uint32_t;
+typedef __int64 int64_t;
+typedef unsigned __int64 uint64_t;
+typedef int ssize_t;
+#endif
 
+#if defined(_WIN32) || defined(_WIN64)
+#define WIN32_LEAN_AND_MEAN
+#include <windows.h>
+#include <winsock2.h>
+#include <ws2tcpip.h>
+typedef int socklen_t;
+#else
 #include <netinet/in.h>
+#endif
 
 #include <openssl/ssl.h>
 #include <openssl/err.h>
